syntax = "proto3";

package auth.proto;

option go_package = "./proto;proto";

import "google/protobuf/descriptor.proto";

// MethodOptions for check user's permission's automatically.
extend google.protobuf.MethodOptions {
  MethodAuthOptions options = 50000;
}

message MethodAuthOptions {
  bool authenticated = 1;
  // required_permission is the list of permissions that the user must have to
  // access the method.
  repeated Permission required_permission = 2;
  // required_role is the list of roles.
  // User must have at least one of the roles to access the method.
  repeated Role required_role = 3;
}

enum Role {
  UNKNOWN_ROLE = 0;
  SUPER_ROLE = 1;
  CUSTOMER_ROLE = 2;
  ADMIN_ROLE = 3;
  EMPLOYEE_ROLE = 4;
  ANOTHER_ROLE = 5;
}

enum Permission {
  UNKNOWN_PERMISSION = 0;
  READ_SOMETHING_PERMISSION = 1;
  WRITE_SOMETHING_PERMISSION = 2;
  CHANGE_SOMETHING_PERMISSION = 3;
  ANOTHER_PERMISSION = 4;
}
